--- a/app/views/tweets/edit.erb
+++ b/app/views/tweets/edit.erb
@@ -3,7 +3,10 @@
 <form  action="/tweets/<%= @tweet.id %>" method="POST">
   <input type="hidden" name="_method" value="PATCH">
   
-  <input type="text" name="content" value="<%= @tweet.content %>">
+  <textarea name="content" id= "content" >
+  	<%= @tweet.content %>
+  </textarea>
+
   <input type="submit" name="Edit Tweet" value="submit">
 </form>
 
