--- a/app/views/users/show.erb
+++ b/app/views/users/show.erb
@@ -8,3 +8,10 @@
 <%end%>
 
 </ul>
+
+<form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
+  <input type="hidden" name="_method" value="delete">
+  <label for="">Delete Tweet:</label>
+   <br>
+  <input type="submit" name="submit" value="Delete Tweet" id="Delete Tweet">
+</form>
