--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,7 +1,6 @@
 <h1>Login to Your Fwitter Account</h1>
 <form action="/login" method="post">
-  <input type="text" name="user[username]" placeholder="Username">
-  <input type="text" name="user[email]" placeholder="Email">
-  <input type="password" name="user[password]" placeholder="Password">
-  <input type="submit" value="Log In">
+  <input type="text" name="username" placeholder="Username">
+  <input type="password" name="password" placeholder="Password">
+  <input type="submit" id="submit" value="Log In">
 </form>
