--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,6 +1,9 @@
 <label>Tweet: </label>
 <%=@tweet.content%>
 <br></br>
-<a href="tweets/<%=@tweet.id%>/delete">Delete Tweet</a>
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input type="hidden" id="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
 <br></br>
 <a href="tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
