--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,9 +9,12 @@
   </head>
   <body>
 
+
+    
+
     <div class="container">
       <h1>Flatiron Fwitter</h1>
-      <img src="https://s3.amazonaws.com/after-school-assets/cat-typing.gif">
+      <img src="https://cdn-images-1.medium.com/max/1600/1*U7fJ32l0c-t5mv9VVW5yeg.png">
 
       <%= yield %>
 
