--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,2 +1,7 @@
-<h1>Create User .erb
- </h1>
+<h1>Create a Fwitter Account</h1>
+<form action="/signup" method="post">
+  <input type="text" name="username" placeholder="Username">
+  <input type="text" name="email" placeholder="Email">
+  <input type="password" name="password" placeholder="Password">
+  <input type="submit" value="Sign Up">
+</form>
