--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,10 +1,13 @@
 
-<label>Tweet: </label>
-<%=@tweet.content%>
-<br></br>
-<form method="post" action="/tweets/<%=@tweet.id%>/delete">
-  <input type="hidden" id="hidden" name="_method" value="delete">
-  <input type="submit" value="Delete Tweet">
+<p> <%= @tweet.content %> </p>
+
+<form class="" action="/tweets/<%=@tweet.id%>/edit" method="get">
+<input type="submit" name="Edit Tweet" value="Edit Tweet">
 </form>
-<br></br>
-<a href="tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<form class="" action="/tweets/<%=@tweet.id%>/delete" method="post">
+<input type="hidden" name="_method" value="delete">
+<label for="">Delete Tweet:</label>
+ <br>
+<input type="submit" name="submit" value="Delete Tweet" id="Delete Tweet">
+</form>
