--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -6,12 +6,12 @@
   <body>
     <h1>Fwitter</h1>
     <% if logged_in? %>
-        <a href="/tweets/new"> Create Tweet </a> </br>
-        <a href="/logout"> Log Out </a>
+        <a href="/tweets/new">Create Tweet</a> </br>
+        <a href="/logout">Log Out</a>
         <p>Welcome, <%=current_user.username %></p>
     <% else %>
-        <a href="/signup">Sign Up</a>
-        <a href="/login"> Sign In </a>
+        <a href="/signup">Sign Up</a> </br>
+        <a href="/login">Sign In</a>
     <%end %>
     <%= yield %>
   </body>
