--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -1,5 +1,5 @@
 <h1>Create Tweet</h1>
-<form action="/tweets" method="post">
+<form method="post" action="/tweets">
   <input type="text" name="content" placeholder="Tweet Content:">
   <input type="submit" value="submit">
 </form>
