--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -2,7 +2,7 @@
 <p><%=@tweet.content%></p>
 
 <form method="post" action="/tweets/<%=@tweet.id%>/delete">
-  <input id="hidden" type="hidden" name="_method" value="DELETE">
+  <input id="hidden" type="hidden" name="_method" value="delete">
   <input type="submit" value="Delete Tweet">
 </form>
 
