--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,4 +1,6 @@
 <h1> Welcome to Fwitter </h1>
+<p> Please loging or sign up to start tweeting.</p> <br><br>
 
-<a href="/signup">Sign Up: </a><br><br>
-<a href="/login">Log In: </a><br><br>
+<a href="/signup">Sign Up</a>
+...
+<a href="/login">Log In </a>
