--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,4 +5,10 @@
   <input type="submit" value="Delete Tweet">
 </form>
 
+<br><br>
+
 <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<br><br>
+
+<a href="/tweets">See All Tweets</a>
