--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,7 +1,8 @@
 <h1> Welcome, <%=@username%> </h1>
 
+<label >Your tweets:</label><br><br>
 <% @tweets.all.each do |tweet|%>
-<%=tweet.content%>
+<a href="/tweets/<%=tweet.id%>"><%=tweet.content%></a><br><br>
 <%end%>
-<a href="/tweets/new">Tweet: </a><br><br>
-<a href="/logout">Sign Out: </a><br><br>
+<a href="/tweets/new">Tweet </a><br><br>
+<a href="/logout">Sign Out </a><br><br>
