--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,15 +1,10 @@
-<h1>Create your login</h1>
-<form action="/signup" method="post">
-
+<h2>Create your login</h2>
+<form action="/signup" method="POST">
   <h4>Email:</h4>
   <input type="text" name="email">
-
   <h4>Username:</h4>
   <input type="text" name="username">
-
   <h4>Password:</h4>
-  <input type="text" name="password" value="">
-
-  <input type="submit" name="submit" value="submit">
-
+  <input type="text" name="password">
+  <input type="submit" value="submit" name="submit">
 </form>
