--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,4 +1,4 @@
-<h1>Welcome <%=current_user.name%></h1>
+<h1>Welcome, <%=current_user.username%></h1>
 <%@tweets.each do |tweet|%>
   <%=tweet.content%>
 <%end%>
