--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -7,7 +7,7 @@
     <nav>
       <% if logged_in? %>
         <a href="/logout">Log Out</a>
-        <p>Welcome to Fwitter, <%=current_user.username%></p>
+        <p>Welcome, <%=current_user.username%></p>
       <%else%>
       <a href="/signup">Sign Up</a>
       <a href="/login">Sign In</a>
