--- a/app/views/tweets/index.erb
+++ b/app/views/tweets/index.erb
@@ -1,4 +1,5 @@
-<h1>Welcome, <%=current_user.username%></h1>
 <%@tweets.each do |tweet|%>
-  <%=tweet.content%>
+  <div>
+    <%=tweet.content%>
+  </div>
 <%end%>
