--- a/app/views/tweets/create_tweet.erb
+++ b/app/views/tweets/create_tweet.erb
@@ -2,5 +2,5 @@
 <form action="/tweets" method="POST">
   <label>Status:</label>
     <input type="text" name="content">
-  <input type="submit" value="submit">
+  <input class="btn btn-primary" type="submit" value="submit">
 </form>
