--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -1,5 +1,13 @@
 <%=@tweet.content%>
 
+<h3>Edit Tweet</h3>
+<form action="/tweets/<%=@tweet.id%>/edit" method="POST">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <input type="text" name="content" value="<%=@tweet.content%>"
+  <button type="submit" value="delete">Delete Tweet</button>
+</form>
+
+
 <h3>Delete Tweet</h3>
 <form action="/tweets/<%=@tweet.id%>/delete" method="POST">
   <input id="hidden" type="hidden" name="_method" value="delete">
