--- a/app/views/tweets/show.erb
+++ b/app/views/tweets/show.erb
@@ -4,7 +4,7 @@
 <form action="/tweets/<%=@tweet.id%>/edit" method="POST">
   <input id="hidden" type="hidden" name="_method" value="patch">
   <input type="text" name="content" value="<%=@tweet.content%>"
-  <button type="submit" value="delete">Delete Tweet</button>
+  <button type="submit" value="delete">Edit Tweet</button>
 </form>
 
 
