--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -2,5 +2,5 @@
 <form action="/login" method ="POST">
   <input type="text" name="username" placeholder="Username:">
   <input type="password" name="password" placeholder="Password:">
-  <button class="btn btn-primary" type="submit" value="submit">Submit</button>
+  <button type="submit" value="submit">Submit</button>
 </form>
