--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,10 +1,10 @@
 <h1>Log In</h1>
 <form class="" action="/login" method="post">
-  <p><input type="text" name="user[username]" placeholder="Username"></p>
+  <p><input id="username" type="text" name="user[username]" placeholder="Username"></p>
 
-  <p><input type="text" name="user[email]" placeholder="Email"></p>
+  <p><input id="email" type="text" name="user[email]" placeholder="Email"></p>
 
-  <p><input type="text" name="user[password]" placeholder="Password"></p>
+  <p><input id="password" type="text" name="user[password]" placeholder="Password"></p>
 
   <p><input type="submit" value="Sign Up"></p>
 </form>
