--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,10 +1,10 @@
 <h3>Sign Up</h3>
 <form class="" action="/signup" method="post">
-  <p><input id="username" type="text" name="user[username]" placeholder="Username"></p>
+  <p><input id="username" type="text" name="username" placeholder="Username"></p>
 
-  <p><input id="email" type="text" name="user[email]" placeholder="Email"></p>
+  <p><input id="email" type="email" name="email" placeholder="Email"></p>
 
-  <p><input id="password" type="text" name="user[password]" placeholder="Password"></p>
+  <p><input id="password" type="password" name="password" placeholder="Password"></p>
 
   <p><input type="submit" value="Sign Up"></p>
 </form>
