--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,12 +1,11 @@
-<% if flash.has?(:message) %>
-  <%= flash[:message] %>
-<% end %>
-
-<p>hello</p>
 
 <h3>Log In.</h3>
 <form action="/login" method="POST">
-	<input type="text" name="username" name="username" placeholder="Username:">
-	<input type="password" name="password" name="email" placeholder="Password:">
+	<input type="text" name="User[username]" id="username" placeholder="Username:">
+	<input type="password" name="User[password]" id="password" placeholder="Password:">
 	<input type="submit" value="Log In">
 </form>
+<!--
+<% if flash.has?(:message) %>
+  <%= flash[:message] %>
+<% end %> -->
