--- a/app/views/users/create_user.erb
+++ b/app/views/users/create_user.erb
@@ -1,7 +1,16 @@
-<h3>Sign Up</h3>
-<form action="/signup" method="POST">
-	<input type="text" name="username" name="username" placeholder="Username:">
-	<input type="text" name="email" name="email" placeholder="Email:">
-	<input type="password" name="password" name="email" placeholder="Password:">
-	<input type="submit" value="Sign Up">
-</form>
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>Sign Up</title>
+	</head>
+	<body>
+		<h3>Sign Up</h3>
+		<form action="/signup" method="POST">
+			<input type="text" name="username" name="username" placeholder="Username:">
+			<input type="text" name="email" name="email" placeholder="Email:">
+			<input type="password" name="password" name="email" placeholder="Password:">
+			<input type="submit" value="Sign Up">
+		</form>
+	</body>
+</html>
