--- a/app/views/users/login.erb
+++ b/app/views/users/login.erb
@@ -1,11 +1,11 @@
 
-<h3>Log In.</h3>
-<form action="/login" method="POST">
-	<input type="text" name="User[username]" id="username" placeholder="Username:">
-	<input type="password" name="User[password]" id="password" placeholder="Password:">
-	<input type="submit" value="Log In">
-</form>
-<!--
 <% if flash.has?(:message) %>
   <%= flash[:message] %>
-<% end %> -->
+<% end %>
+
+<h3>Log In.</h3>
+<form action="/login" method="POST">
+	<input type="text" name="username" id="username" placeholder="Username:">
+	<input type="password" name="password" id="password" placeholder="Password:">
+	<button type="submit" id="submit" value="Log In">
+</form>
