--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -4,7 +4,7 @@
 
 <h3>Edit this tweet</h3>
 <h4>Previous content:<%=@tweet.content%></h4>
-<form ction="/tweets/<%=@tweet.id%>" method="post">
+<form action="/tweets/<%=@tweet.id%>" method="post">
   <input type="text" name="content" id="content" placeholder="New content:">
   <button type="submit" name="submit" id="submit"></button>
 </form>
