--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -3,5 +3,10 @@
 <% end %>
 
 <h3><%=@tweet.content%></h3>
-<h4> <a href="/tweets/<%=@tweet.id%>/delete">Delete Tweet?</a></h4>
-<h4> <a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet?</a></h4>
+
+<h4>
+  <form action="/tweets/<%=@tweet.id%>/delete" method="post">
+    <button type="submit" id="Delete Tweet">Delete Tweet?</button></a>
+  </form></h4>
+
+<h4> <a href="/tweets/<%=@tweet.id%>/edit"><button type="submit" id="Edit Tweet">Edit Tweet?</a></h4>
