--- a/app/views/tweets/edit_tweet.erb
+++ b/app/views/tweets/edit_tweet.erb
@@ -1,7 +1,6 @@
-<form method="post" action="/tweets/<%=@tweet.id%>">
-  <input type="hidden" name="_method" id="hidden" value="patch">
-
-  <input type="text" name="content" value="<%=@tweet.content%>">
-
+<form method="post" action="/tweets/<%= @tweet.id %>">
+  <input id="hidden" type="hidden" name="_method" value="patch">
+  <label for="content">Tweet:</label>
+  <input type="text" name="content" value="<%= @tweet.content %>">
   <input type="submit" value="submit">
 </form>
