--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,3 +1,6 @@
-<%=@tweets.each do |tweet|%>
-<%=tweet%>
-<%end%>
+<h1>Welcome, <%= @current_user.username %></h1>
+<% @tweets.each do |tweet| %>
+  <ul>
+    <li><%= tweet.content %></li><br>
+  </ul>
+<% end %>
