--- a/app/views/tweets/tweets.erb
+++ b/app/views/tweets/tweets.erb
@@ -1,4 +1,7 @@
 <h1>Welcome, <%= @current_user.username %></h1>
+
+<p><a href="/tweets/new">Create a Tweet!</a></p>
+
 <% @tweets.each do |tweet| %>
   <ul>
     <li><%= tweet.content %></li><br>
