--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -1,2 +1,12 @@
 <h1>Your tweet:</h1>
 <h6><%=@tweet.content%></h6>
+
+<a href="/tweets/<%=@tweet.id%>/edit">Edit Tweet</a>
+
+<form method="post" action="/tweets/<%=@tweet.id%>/delete">
+  <input id="hidden" type="hidden" name="_method" value="delete">
+  <input type="submit" value="Delete Tweet">
+</form>
+
+<a href="/tweets/new">Post a tweet</a>
+<a href="/tweets">See all my tweets</a>
