--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -2,14 +2,22 @@
 <html>
   <head>
     <title>Fwitter</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
   </head>
   <body>
-
+    
     <div class="container">
       <h1>Welcome to Fwitter!</h1>
-      <h2>This is located in layout.erb!</h2>
-      <h2>Don't forget to <strong>yield</strong> your views!</h2>
+      <nav id="nav">
+        <ul>
+          <a href="/login"><li>Login</li></a>
+          <a href="/signup"><li>Sigup</li></a>
+          <a href="/logout"><li>Logout</li></a>
+        </ul>
+      </nav>
+      <%= yield %>
     </div>
+
 
   </body>
 </html>
