--- a/app/views/tweets/show_tweet.erb
+++ b/app/views/tweets/show_tweet.erb
@@ -5,7 +5,7 @@
 
 
 <form action= "/tweets/<%=@tweet.id%>/delete" method = "POST">
-  <input id+ "hidden" type = "hidden" name= "_method"
+  <input id= "hidden" type = "hidden" name= "_method"
   value = "delete">
 </br>
 
